Fix letter-spacing

--- a/style.css
+++ b/style.css
@@ -1397,7 +1397,7 @@ body {
     font-size: 10px;
     font-weight: 400;
     line-height: 13.62px;
-    letter-spacing: 8%;
+    letter-spacing: 6%;
     text-decoration-line: underline;
     color: rgb(90, 100, 114);
     -webkit-transform: translateX(7%) translateY(-35%);
